--- a/index.html
+++ b/index.html
@@ -475,6 +475,53 @@
             <use href="./img/sprite.svg#icon-close"></use>
           </svg>
         </button>
+
+        <h3>Залиште свої дані, ми вам передзвонимо</h3>
+
+        <form class="modal-form">
+
+        <div class="modal-form-item">Ім'я
+          <label for="modal-name">
+            <input type="text" name="name" id="modal-name"/>
+          </label>
+        </div>
+
+
+        <div class="modal-form-item">Телефон
+          <label for="modal-tel">
+            <input type="text" name="tel" id="modal-tel"/>
+          </label>
+        </div>
+
+
+        <div class="modal-form-item">Пошта
+          <label for="modal-email">
+            <input type="text" name="mail" id="modal-email"/>
+          </label>
+        </div>
+
+
+        <div class="modal-form-item">Коментар
+          <label for="modal-commentary">
+            <input type="textarea" name="name" id="modal-commentary"/>
+          </label>
+        </div>
+
+        <div class="modal-form-item">
+          <label for="modal-agreement">
+            <input type="checkbox" name="name" id="modal-agreement"/>Погоджуюся з розсилкою та приймаю Умови договору
+          </label>
+        </div>
+
+          <div>
+            <button type="submit" class="modal-send-btn">
+              <span class="modal-send-text">Відправити</span>
+            </button>
+          </div>
+          </form>
+    </div>
+
+
       </div>
     </div>
     <script src="./js/modal.js"></script>
