--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
           </svg>
         </button>
 
-        <p class="modal-form-caption">Залиште свої дані, ми вам передзвонимо</p>
+        <p class="modal-form-title">Залиште свої дані, ми вам передзвонимо</p>
 
         <form class="modal-form">
           <label class="modal-form-field"
@@ -503,37 +503,47 @@
                 title="xxx-xxx-xx-xx"
                 name="user_phone"
               />
+              <svg class="svg-modal-icon">
+                <use href="./img/sprite.svg#icon-phone"></use>
+              </svg>
             </span>
           </label>
 
           <label class="modal-form-field"
             >Пошта
             <span class="modal-form-input-wrapper">
-              <input type="email" class="modal-form-input" required pattern="" name="user_email" />
+              <input
+                type="email"
+                class="modal-form-input"
+                required
+                pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
+                name="user_email"
+              />
             </span>
           </label>
 
-          <label class="modal-form-item"
-            >Коментар
+          <label class="modal-form-field">
+            <span class="modal-form-field-desc">Коментар</span>
             <textarea
+              name="user_message"
               class="modal-form-message"
               placeholder="Введіть текст"
-              name="user_commentary"
             ></textarea>
           </label>
 
-          <div class="modal-form-item">
-            <label for="modal-agreement">
-              <input type="checkbox" name="name" id="modal-agreement" />Погоджуюся з розсилкою та
-              приймаю Умови договору
-            </label>
-          </div>
+          <label class="modal-form-check-field">
+            <input type="checkbox" class="modal-form-check" name="user_policy" required />
+            <svg class="modal-form-own-checkbox">
+              <use
+                class="modal-form-own-checkbox-icon"
+                href="./img/sprite.svg#icon-vector-check"
+              ></use></svg
+            >Погоджуюся з розсилкою та приймаю&nbsp<a href="">Умови договору</a>
+          </label>
 
-          <div>
-            <button type="submit" class="modal-send-btn">
-              <span class="modal-send-text">Відправити</span>
-            </button>
-          </div>
+          <button type="submit" class="modal-send-btn">
+            <span class="modal-send-text">Відправити</span>
+          </button>
         </form>
       </div>
     </div>
