--- a/index.html
+++ b/index.html
@@ -453,9 +453,15 @@
 
         <div>
           <p class="sign-up">Підпишіться на розсилку</p>
-          <form>
-            <label for="mail">
-              <input class="input-styles" type="email" name="mail" id="mail" placeholder="E-mail" />
+          <form class="footer-form">
+            <label class="footer-form-field">
+              <input
+                class="input-styles"
+                type="email"
+                name="user_email"
+                placeholder="E-mail"
+                pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
+              />
             </label>
             <button type="submit" class="sign-up-btn">
               <span class="sign-up-text">Підписатися</span>
@@ -468,7 +474,7 @@
       </div>
     </footer>
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-button" data-modal-close>
           <svg class="modal-close-icon">
@@ -479,8 +485,8 @@
         <p class="modal-form-title">Залиште свої дані, ми вам передзвонимо</p>
 
         <form class="modal-form">
-          <label class="modal-form-field"
-            >Ім'я
+          <label class="modal-form-field">
+            <span class="modal-item">Ім'я</span>
             <span class="modal-form-input-wrapper">
               <input
                 type="text"
@@ -489,11 +495,14 @@
                 pattern="[a-zA-Zа-яА-ЯіІїЇ'`]+"
                 name="user_name"
               />
+              <svg class="svg-modal-icon">
+                <use href="./img/sprite.svg#icon-human"></use>
+              </svg>
             </span>
           </label>
 
-          <label class="modal-form-field"
-            >Телефон
+          <label class="modal-form-field">
+            <span class="modal-item">Телефон</span>
             <span class="modal-form-input-wrapper">
               <input
                 type="tel"
@@ -509,8 +518,8 @@
             </span>
           </label>
 
-          <label class="modal-form-field"
-            >Пошта
+          <label class="modal-form-field">
+            <span class="modal-item">Пошта</span>
             <span class="modal-form-input-wrapper">
               <input
                 type="email"
@@ -519,6 +528,9 @@
                 pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
                 name="user_email"
               />
+              <svg class="svg-modal-icon">
+                <use href="./img/sprite.svg#icon-envelope-2"></use>
+              </svg>
             </span>
           </label>
 
@@ -538,7 +550,7 @@
                 class="modal-form-own-checkbox-icon"
                 href="./img/sprite.svg#icon-vector-check"
               ></use></svg
-            >Погоджуюся з розсилкою та приймаю&nbsp<a href="">Умови договору</a>
+            >Погоджуюся з розсилкою та приймаю&nbsp;<a href="">Умови договору</a>
           </label>
 
           <button type="submit" class="modal-send-btn">
