--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="footer-sign-up">
           <p class="sign-up">Підпишіться на розсилку</p>
           <form class="footer-form">
             <label class="footer-form-field">
@@ -550,7 +550,9 @@
                 class="modal-form-own-checkbox-icon"
                 href="./img/sprite.svg#icon-vector-check"
               ></use></svg
-            >Погоджуюся з розсилкою та приймаю&nbsp;<a href="">Умови договору</a>
+            >Погоджуюся з розсилкою та приймаю&nbsp;<a class="conditions-link" href=""
+              >Умови договору</a
+            >
           </label>
 
           <button type="submit" class="modal-send-btn">
