--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="header-styles">
       <div class="flex-for-header container">
         <nav class="flex-for-nav">
           <a class="logo-web-header" href="./index.html">Web<span>Studio</span></a>
