--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <nav class="flex-for-nav">
           <a class="logo-web-header" href="./index.html">Web<span>Studio</span></a>
           <ul class="flex-for-nav">
-            <li class="list-nav current">
+            <li class="list-nav">
               <a class="header-nav current" href="#">Студія</a>
             </li>
             <li class="list-nav">
-              <a class="header-nav" href="portfolio.html">Портфоліо</a>
+              <a class="header-nav" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="list-nav">
               <a class="header-nav" href="#">Контакти</a>
