--- a/portfolio.html
+++ b/portfolio.html
@@ -299,14 +299,14 @@
           </ul>
         </div>
 
-        <div>
+        <div class="footer-sign-up">
           <p class="sign-up">Підпишіться на розсилку</p>
           <form class="footer-form">
             <label class="footer-form-field">
               <input
                 class="input-styles"
                 type="email"
-                name="mail"
+                name="user_email"
                 placeholder="E-mail"
                 pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
               />
